Mantis 0001294: Add the ability to execute a rsync job via SSH and authenticate via public key.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -539,7 +539,9 @@
 					<extraoptions></extraoptions>
 					// remote
 					<mode>push|pull</mode>
+					<authentication>password|pubkey</authentication>
 					<password>xxx</password>
+					<sshcertificateref>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</sshcertificateref>
 				</job>
 				-->
 			</jobs>
