Mantis 0001466: New rsync via ssh. Add SSH port.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -542,6 +542,7 @@
 					<authentication>password|pubkey</authentication>
 					<password>xxx</password>
 					<sshcertificateref>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</sshcertificateref>
+					<sshport>22</sshport>
 				</job>
 				-->
 			</jobs>
