--- a/deb/openmediavault/var/www/openmediavault/css/omv.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv.css
@@ -466,6 +466,13 @@ div#headerrlogo {
 .x-workspace-node-tree .x-grid-row-over .x-grid-td {
 	cursor: pointer;
 }
+.x-workspace-node-tree .x-tree-icon-parent {
+	width: 0px;
+	visibility: hidden;
+}
+.x-workspace-node-tree.x-tree-lines .x-tree-elbow-line {
+	visibility: hidden;
+}
 /*
 @supports ((filter: invert()) or (-webkit-filter: invert())) {
 	.x-workspace-node-tree .x-grid-body {
