--- a/deb/openmediavault/var/www/openmediavault/css/omv.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv.css
@@ -224,8 +224,8 @@ div#headerrlogo {
 .x-form-folder-trigger {
 	background-image: url("../images/folder-trigger.png");
 }
-.x-form-paste-trigger {
-	background-image: url("../images/paste-trigger.png");
+.x-form-copy-trigger {
+	background-image: url("../images/copy-trigger.png");
 }
 /* Checkbox */
 .x-form-checkbox-default,
