Continue to improve code.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -126,8 +126,10 @@
 			-->
 		</certificates>
 		<network>
-			<hostname>openmediavault</hostname>
-			<domainname></domainname>
+			<dns>
+				<hostname>openmediavault</hostname>
+				<domainname></domainname>
+			<dns>
 			<interfaces>
 				<!--
 				<interface>
