0001517: Typo in config.xml template.

--- a/deb/openmediavault/usr/share/openmediavault/templates/config.xml
+++ b/deb/openmediavault/usr/share/openmediavault/templates/config.xml
@@ -129,7 +129,7 @@
 			<dns>
 				<hostname>openmediavault</hostname>
 				<domainname></domainname>
-			<dns>
+			</dns>
 			<interfaces>
 				<!--
 				<interface>
