--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -216,3 +216,9 @@ div#headerrlogo {
 	color: #333333;
 	line-height: 14px;
 }
+/* Dashboard */
+.x-workspace-dashboard-widget-icon {
+	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+	opacity: 0.7;
+	background-size: 16px 16px;
+}
