--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -46,7 +46,7 @@
 	background: #98b7cf;
 }
 /******************************************************************************/
-/* Shutdown page                                                                 */
+/* Shutdown page                                                              */
 /******************************************************************************/
 .shutdown-page {
 	background: #98b7cf;
@@ -199,6 +199,40 @@ div#headerrlogo {
 	background-position: 0 center;
 }
 /******************************************************************************/
+/* Meditation message box */
+.x-message-box-guru {
+	width: 100%;
+	background-color: #000000;
+	padding: 7px;
+}
+.x-message-box-guru-body {
+	padding: 12px 0px 12px 0px;
+	border: solid 6px #ff0000;
+	color: #f72000;
+	font-family: courier, "Courier New", monospace;
+	font-weight: bold;
+	font-size: large;
+	text-align: center;
+	-webkit-animation: x-message-box-guru-border-flash 2s infinite;
+	-moz-animation: x-message-box-guru-border-flash 2s infinite;
+	-o-animation: x-message-box-guru-border-flash 2s infinite;
+	animation: x-message-box-guru-border-flash 2s infinite;
+}
+@keyframes x-message-box-guru-border-flash {
+	0% {
+		border-color: #ff0000;
+	}
+	50% {
+		border-color: #ff0000;
+	}
+	51% {
+		border-color: #000000
+	}
+	100% {
+		border-color: #000000
+	}
+}
+/******************************************************************************/
 /* Invalid form fields */
 .x-form-invalid-icon-default,
 .x-form-invalid-under-default,
@@ -228,6 +262,79 @@ div#headerrlogo {
 	color: #333333;
 	line-height: 14px;
 }
+/* Form grid field */
+.x-form-invalid .x-form-gridfield-body .x-grid {
+	border: 1px solid #cc3300;
+}
+/******************************************************************************/
+/* About box */
+.x-box-aboutbox {
+	margin: 15px;
+	text-align: left;
+	padding: 5px 10px;
+	background-color: #eee;
+	font-family: "Myriad Pro","Myriad Web","Tahoma","Helvetica","Arial",sans-serif;
+	color: #393939;
+	border-radius: 4px;
+}
+.x-box-aboutbox a {
+	text-decoration: none !important;
+	font-style: italic;
+	color:#444444;
+}
+/******************************************************************************/
+/* RRD graph panel */
+.x-panel-rrdgraph {
+	margin: 10px 10px 10px 10px;
+	text-align: center;
+}
+.x-panel-rrdgraph img {
+	border: 0 none;
+	font-size: 11px;
+	margin: 1px 1px 1px 1px;
+}
+/******************************************************************************/
+/* Button */
+.x-btn-icon-el {
+	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+	opacity: 0.7;
+}
+.x-btn-icon-16x16 {
+	background-size: 16px 16px;
+}
+/******************************************************************************/
+/* Tabs */
+.x-tab-bar-default {
+	background-color: #98b7cf;
+}
+.x-tab-invalid {
+	border: 1px solid #cc3300;
+}
+/******************************************************************************/
+/* Progress bar */
+.x-progress-bar {
+	background-color: #b3b3b3;
+	background-image: none;
+	border-top-color: #b3b3b3;
+	border-bottom-color: #b3b3b3;
+	border-right-color: #b3b3b3;
+}
+.x-progress-default {
+	border-width: 0px; /* Flat design */
+}
+.x-progress-default .x-progress-bar-default {
+	background-color: #98b7cf; /* Cooperate color */
+	background-image: none; /* Flat design */
+}
+/******************************************************************************/
+/* Menu */
+.x-menu-item-icon {
+	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+	opacity: 0.7;
+}
+.x-menu-item-icon-16x16 {
+	background-size: 16px 16px;
+}
 /******************************************************************************/
 /* Dashboard */
 .x-workspace-dashboard-widget-icon {
@@ -236,7 +343,94 @@ div#headerrlogo {
 	background-size: 16px 16px;
 }
 /******************************************************************************/
-/* Tabs */
-.x-tab-bar-default {
-	background-color: #98b7cf;
+/* Workspace node view */
+.x-workspace-node-view {
+	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+	opacity: 0.7;
 }
+.x-workspace-node-view-category {
+}
+.x-workspace-node-view-category-header {
+	border-bottom: 1px solid #d8d8d8;
+	font-weight: bold;
+	font-size: small;
+}
+.x-workspace-node-view-category-header .x-item-selected {
+	background-color: #e0e0e0;
+}
+.x-workspace-node-view-category-header .x-item-over {
+	background-color: #efefef;
+	cursor: pointer;
+}
+.x-workspace-node-view-category-header .thumb-wrap {
+	padding: 5px;
+}
+.x-workspace-node-view-category-items .thumb-wrap .thumb {
+	padding: 5px;
+	padding-bottom: 0;
+}
+.x-workspace-node-view-category-items .thumb-wrap .thumb img {
+	height: 32px;
+	width: 32px;
+}
+.x-workspace-node-view-category-items .thumb-wrap {
+	float: left;
+	padding: 5px;
+	text-align: center;
+	width: 96px;
+	height: 80px;
+}
+.x-workspace-node-view-category-items .thumb-wrap span {
+	display: block;
+	overflow: visible;
+	word-break: break-word; /* Non standard for webkit */
+	overflow-wrap: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
+}
+.x-workspace-node-view-category-items .x-item-selected {
+	background-color: #e0e0e0;
+}
+.x-workspace-node-view-category-items .x-item-over {
+	background-color: #efefef;
+	cursor: pointer;
+}
+/******************************************************************************/
+/* Workspace node tree */
+.x-workspace-node-tree .x-grid-row-over .x-grid-td {
+	cursor: pointer;
+}
+.x-workspace-node-tree .x-tree-icon-parent,
+.x-workspace-node-tree .x-tree-icon-parent-expanded {
+	width: 0px;
+	visibility: hidden;
+}
+.x-workspace-node-tree.x-tree-lines .x-tree-elbow-line {
+	visibility: hidden;
+}
+/*
+@supports ((filter: invert()) or (-webkit-filter: invert())) {
+	.x-workspace-node-tree .x-grid-body {
+		background: #98b7cf;
+	}
+	.x-workspace-node-tree .x-grid-cell {
+		background-color: transparent;
+	}
+	.x-workspace-node-tree .x-tree-node-text {
+		color: white;
+	}
+	.x-workspace-node-tree .x-tree-icon, .x-tree-elbow-img {
+		opacity: 1;
+		filter: invert(100%);
+		-webkit-filter: invert(100%);
+	}
+	.x-workspace-node-tree .x-grid-tree-node-leaf .x-grid-cell {
+		background-color: rgba(255,255,255,0.1);
+	}
+	.x-workspace-node-tree .x-grid-row-focused .x-grid-td,
+	.x-workspace-node-tree .x-grid-row-over .x-grid-td {
+		background-color: rgba(0,0,0,0.2);
+	}
+}
+*/
