--- a/deb/openmediavault/var/www/openmediavault/css/theme-gray.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-gray.css
@@ -19,6 +19,7 @@
  * along with OpenMediaVault. If not, see <http://www.gnu.org/licenses/>.
  */
 
+/******************************************************************************/
 /* Trigger field */
 .x-form-password-trigger {
 	cursor: pointer;
@@ -33,6 +34,7 @@
 .x-form-copy-trigger {
 	background-image: url("../images/copy-trigger.png");
 }
+/******************************************************************************/
 /* Checkbox */
 .x-form-checkbox-default,
 .x-form-radio-default {
@@ -59,10 +61,12 @@
 .x-form-cb-checked .x-form-checkbox-focus.x-form-checkbox-default {
 	background-position: left;
 }
+/******************************************************************************/
 /* Checkbox field */
 .x-form-type-checkbox input.x-form-invalid-field {
 	border: 1px solid #cc3300;
 }
+/******************************************************************************/
 /* Grid checkbox column */
 .x-grid-checkcolumn {
 	width: 32px;
@@ -75,50 +79,7 @@
 	background-image: url("../images/switch_on.png");
 	background-image: url("../images/switch_on.svg"), none;
 }
-/* About box */
-.x-box-aboutbox {
-	margin: 15px;
-	text-align: left;
-	padding: 5px 10px;
-	background-color: #eee;
-	font-family: "Myriad Pro","Myriad Web","Tahoma","Helvetica","Arial",sans-serif;
-	color: #393939;
-	border-radius: 4px;
-}
-.x-box-aboutbox a {
-	text-decoration: none !important;
-	font-style: italic;
-	color:#444444;
-}
-/* RRD graph panel */
-.x-panel-rrdgraph {
-	margin: 10px 10px 10px 10px;
-	text-align: center;
-}
-.x-panel-rrdgraph img {
-	border: 0 none;
-	font-size: 11px;
-	margin: 1px 1px 1px 1px;
-}
-/* Progress bar */
-.x-progress-bar {
-	background-color: #b3b3b3;
-	background-image: none;
-	border-top-color: #b3b3b3;
-	border-bottom-color: #b3b3b3;
-	border-right-color: #b3b3b3;
-}
-.x-progress-default {
-	border-width: 0px; /* Flat design */
-}
-.x-progress-default .x-progress-bar-default {
-	background-color: #98b7cf; /* Cooperate color */
-	background-image: none; /* Flat design */
-}
-/* Tabs */
-.x-tab-invalid {
-	border: 1px solid #cc3300;
-}
+/******************************************************************************/
 /* Message box */
 .x-message-box-info, .x-message-box-warning, .x-message-box-question,
 .x-message-box-error {
@@ -144,39 +105,7 @@
 	background-image: url("/images/icon-error.png");
 	background-image: url("/images/icon-error.svg"), none;
 }
-/* Meditation message box */
-.x-message-box-guru {
-	width: 100%;
-	background-color: #000000;
-	padding: 7px;
-}
-.x-message-box-guru-body {
-	padding: 12px 0px 12px 0px;
-	border: solid 6px #ff0000;
-	color: #f72000;
-	font-family: courier, "Courier New", monospace;
-	font-weight: bold;
-	font-size: large;
-	text-align: center;
-	-webkit-animation: x-message-box-guru-border-flash 2s infinite;
-	-moz-animation: x-message-box-guru-border-flash 2s infinite;
-	-o-animation: x-message-box-guru-border-flash 2s infinite;
-	animation: x-message-box-guru-border-flash 2s infinite;
-}
-@keyframes x-message-box-guru-border-flash {
-	0% {
-		border-color: #ff0000;
-	}
-	50% {
-		border-color: #ff0000;
-	}
-	51% {
-		border-color: #000000
-	}
-	100% {
-		border-color: #000000
-	}
-}
+/******************************************************************************/
 /* Grid */
 .x-grid-cell-boolean-icon {
 	text-align: center;
@@ -185,6 +114,7 @@
 .x-grid-cell-gray {
 	background-color: #eee;
 }
+/******************************************************************************/
 /* Tree */
 .x-tree-icon, .x-tree-elbow-img {
 	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
@@ -222,116 +152,7 @@
 	background-image: url("../images/tree-folder-open.png");
 	background-image: url("../images/tree-folder-open.svg"), none;
 }
-/* Button */
-.x-btn-icon-el {
-	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-	opacity: 0.7;
-}
-.x-btn-icon-16x16 {
-	background-size: 16px 16px;
-}
-/* Workspace node view */
-.x-workspace-node-view {
-	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-	opacity: 0.7;
-}
-.x-workspace-node-view-category {
-}
-.x-workspace-node-view-category-header {
-	border-bottom: 1px solid #d8d8d8;
-	font-weight: bold;
-	font-size: small;
-}
-.x-workspace-node-view-category-header .x-item-selected {
-	background-color: #e0e0e0;
-}
-.x-workspace-node-view-category-header .x-item-over {
-	background-color: #efefef;
-	cursor: pointer;
-}
-.x-workspace-node-view-category-header .thumb-wrap {
-	padding: 5px;
-}
-.x-workspace-node-view-category-items .thumb-wrap .thumb {
-	padding: 5px;
-	padding-bottom: 0;
-}
-.x-workspace-node-view-category-items .thumb-wrap .thumb img {
-	height: 32px;
-	width: 32px;
-}
-.x-workspace-node-view-category-items .thumb-wrap {
-	float: left;
-	padding: 5px;
-	text-align: center;
-	width: 96px;
-	height: 80px;
-}
-.x-workspace-node-view-category-items .thumb-wrap span {
-	display: block;
-	overflow: visible;
-	word-break: break-word; /* Non standard for webkit */
-	overflow-wrap: break-word;
-	-webkit-hyphens: auto;
-	-moz-hyphens: auto;
-	hyphens: auto;
-}
-.x-workspace-node-view-category-items .x-item-selected {
-	background-color: #e0e0e0;
-}
-.x-workspace-node-view-category-items .x-item-over {
-	background-color: #efefef;
-	cursor: pointer;
-}
-/* Workspace node tree */
-.x-workspace-node-tree .x-grid-row-over .x-grid-td {
-	cursor: pointer;
-}
-.x-workspace-node-tree .x-tree-icon-parent,
-.x-workspace-node-tree .x-tree-icon-parent-expanded {
-	width: 0px;
-	visibility: hidden;
-}
-.x-workspace-node-tree.x-tree-lines .x-tree-elbow-line {
-	visibility: hidden;
-}
-/*
-@supports ((filter: invert()) or (-webkit-filter: invert())) {
-	.x-workspace-node-tree .x-grid-body {
-		background: #98b7cf;
-	}
-	.x-workspace-node-tree .x-grid-cell {
-		background-color: transparent;
-	}
-	.x-workspace-node-tree .x-tree-node-text {
-		color: white;
-	}
-	.x-workspace-node-tree .x-tree-icon, .x-tree-elbow-img {
-		opacity: 1;
-		filter: invert(100%);
-		-webkit-filter: invert(100%);
-	}
-	.x-workspace-node-tree .x-grid-tree-node-leaf .x-grid-cell {
-		background-color: rgba(255,255,255,0.1);
-	}
-	.x-workspace-node-tree .x-grid-row-focused .x-grid-td,
-	.x-workspace-node-tree .x-grid-row-over .x-grid-td {
-		background-color: rgba(0,0,0,0.2);
-	}
-}
-*/
-/* Menu */
-.x-menu-item-icon {
-	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-	opacity: 0.7;
-}
-.x-menu-item-icon-16x16 {
-	background-size: 16px 16px;
-}
-/* Form grid field */
-.x-form-invalid .x-form-gridfield-body .x-grid {
-	border: 1px solid #cc3300;
-}
+/******************************************************************************/
 /* Paging toolbar */
 .x-tbar-page-first,
 .x-item-disabled .x-tbar-page-first {
@@ -358,6 +179,7 @@
 	background-image: url("../images/page-refresh.png");
 	background-image: url("../images/page-refresh.svg"), none;
 }
+/******************************************************************************/
 /* Grid columns */
 .x-grid-cell-booleaniconcolumn,
 .x-grid-cell-iconcolumn {
