--- a/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
@@ -19,33 +19,39 @@
  * along with OpenMediaVault. If not, see <http://www.gnu.org/licenses/>.
  */
 
- /******************************************************************************/
- /* Trigger field */
-  .x-form-password-trigger:before {
+/******************************************************************************/
+/* Trigger field */
+.x-form-password-trigger:before {
 	content: "\f06e";
- }
- .x-form-add-trigger:before {
- 	content: "\f067";
- }
- .x-form-folder-trigger:before {
- 	content: "\f114";
- }
- .x-form-copy-trigger:before {
- 	content: "\f0ea";
- }
- .x-form-trigger-default.x-form-trigger-over {
-	 border-color: #dbdbdb;
-	 background-image: none;
-	 background-color: #ececec;
- }
- .x-form-trigger-wrap-default.x-form-trigger-wrap-focus {
-	 border-color: #98b7cf;
- }
- .x-form-trigger-wrap-default.x-form-trigger-wrap-invalid {
-	 border-color: #cc3300;
- }
- /******************************************************************************/
- /* Panel */
+}
+.x-form-add-trigger:before {
+	content: "\f067";
+}
+.x-form-folder-trigger:before {
+	content: "\f114";
+}
+.x-form-copy-trigger:before {
+	content: "\f0ea";
+}
+.x-form-trigger-default.x-form-trigger-over {
+	border-color: #dbdbdb;
+	background-image: none;
+	background-color: #ececec;
+}
+.x-form-trigger-wrap-default.x-form-trigger-wrap-focus {
+	border-color: #98b7cf;
+}
+.x-form-trigger-wrap-default.x-form-trigger-wrap-invalid {
+	border-color: #cc3300;
+}
+/******************************************************************************/
+/* Spinner field */
+.x-form-spinner-default.x-form-spinner-over {
+	border-color: #dbdbdb;
+	background-color: #ececec;
+}
+/******************************************************************************/
+/* Panel */
 .x-panel-default {
 	border-color: #98b7cf;
 }
