--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -171,6 +171,15 @@ div#headerrlogo {
 	background: #ffeb99;
 	background-image: none;
 }
+.x-toolbar-applycfg .x-message-box-warning {
+	margin: 5px;
+	width: 16px;
+	height: 16px;
+	background-image: url("/images/alert.png");
+	background-image: url("/images/alert.svg"), none;
+	background-position: center center;
+	background-size: 16px 16px;
+}
 /******************************************************************************/
 /* Loadmask */
 .x-mask-msg {
