--- a/deb/openmediavault/var/www/openmediavault/css/theme-gray.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-gray.css
@@ -179,3 +179,14 @@
 	background-image: url("../images/page-refresh.png");
 	background-image: url("../images/page-refresh.svg"), none;
 }
+/******************************************************************************/
+/* Configuration activation toolbar */
+.x-toolbar-applycfg .x-message-box-warning {
+	margin: 5px;
+	width: 16px;
+	height: 16px;
+	background-image: url("/images/alert.png");
+	background-image: url("/images/alert.svg"), none;
+	background-position: center center;
+	background-size: 16px 16px;
+}
