--- a/deb/openmediavault/var/www/openmediavault/css/omv.css
+++ b/deb/openmediavault/var/www/openmediavault/css/omv.css
@@ -429,6 +429,15 @@ div#headerrlogo {
 	background: #ffeb99;
 	background-image: none;
 }
+.x-toolbar-applycfg .x-message-box-warning {
+	margin: 5px;
+	width: 16px;
+	height: 16px;
+	background-image: url("/images/alert.png");
+	background-image: url("/images/alert.svg"), none;
+	background-position: center center;
+	background-size: 16px 16px;
+}
 /* Workspace node view */
 .x-workspace-node-view {
 	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
