Adapt CSS files.

--- a/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-triton.css
@@ -99,7 +99,7 @@
 	visibility: hidden;
 }
 /******************************************************************************/
-/* Dashboard */
+/* Workscape dashboard */
 .x-workspace-dashboard-widget-icon {
 	filter: invert(100%);
 	opacity: 1;
