--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -387,7 +387,11 @@ div#headerrlogo {
 	background-size: 16px 16px;
 }
 /******************************************************************************/
-/* Dashboard */
+/* Workspace navigation toolbar */
+.x-workspace-navigation-toolbar {
+}
+/******************************************************************************/
+/* Workspace dashboard */
 .x-workspace-dashboard-widget-icon {
 	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
 	opacity: 0.7;
