--- a/deb/openmediavault/var/www/openmediavault/css/theme-all.css
+++ b/deb/openmediavault/var/www/openmediavault/css/theme-all.css
@@ -377,6 +377,9 @@ div#headerrlogo {
 	background-color: #98b7cf; /* Cooperate color */
 	background-image: none; /* Flat design */
 }
+.x-progress-warning .x-progress-bar-default {
+	background-color: #ff3b30; /* Red */
+}
 /******************************************************************************/
 /* Menu */
 .x-menu-item-icon {
